# arturo

./: .gitignore  Doxyfile  Makefile  TODO.md  fixup.py
applications/aquarius/: aquarius.c
applications/aquarius/roms/: character_rom.h  monitor_rom.h
applications/forth/: engine.c  forth.c  image_data.h  special.c
applications/superboard/: superboard.c
applications/superboard/include/: superboard.h
applications/superboard/roms/: character_rom.h  monitor_rom.h
applications/test_code/coregfx/: graphics.c
applications/test_code/kernel/: filesystem.c  test_app.c
applications/test_code/mouse/: mouse.c
applications/test_code/udg/: udg.c
backup-code/: Makefile
backup-code/cpu6502/: cpu6502.c
backup-code/cpu6502/generator/: 6502.def
backup-code/cpuz80/generator/: Makefile  generate.rb
backup-code/cpuz80/generator/source/: arithmetic16.src  bit.src  callreturn.src  inputoutput.src  jump.src  links.src  load8.src
backup-code/cpuz80/include/: cpuz80.h
backup-code/forth/: forth.c  sod32.h
backup-code/graphics/: atomic.c  drawing.c  ellipse.c  fontstructures.h  port.c  triangle.c
backup-code/graphics/fonts/: fontdata.h  fontinclude.h  fontindex.h  makeindex.py
backup-code/graphics/fonts/fonts/: small4x6.bmf  small5x5.bmf  system.bmf
backup-code/graphics/fonts/fonts/fontconvert/: fontconvert  fontconvert.c
backup-code/graphics/include/: atomic.h  graphics.h
backup-code/host-forth/: bin2c.py  cross.4th  extend.4th  forth_a.img  kernel.4th  sod32.h  term.c
backup-code/superboard/roms/: basic_rom.h  monitor_rom.h
backup-code/udg/: udg.c
backup-code/vdu/: vdu.c
build_env/: common.make  config.make
documents/: bbc vdu codes.md  kernel.md  modes.ods  setup.md  t1000.py
host-forth/: Makefile  doglos.4th  extend_a.4th  extend_g.4th  forth_a.img  kernel.img  special.c
images/: CMakeLists.txt  Makefile
images/firmware/kernel/: CMakeLists.txt  main.c
images/firmware/kernel/hardware/: dvi_640x480.c  dvi_pinout.c  fileio.c  gamepad.c  sound.c  timing.c  tmds_encode_custom.h  usb_driver.c  usb_storage.c
images/firmware/kernel/hardware/gamepad_drivers/: gamepad_drivers.c  snes_usb.c
images/firmware/kernel/include/: common.h  internal.h  support.h
images/firmware/kernel/include/interface/: dvi_common.h  fileio.h  gamepad.h  miscellany.h  mouse.h  sound.h  usb_interface.h  vdu_internal.h
images/firmware/kernel/include/internal/: dvi_common.h  dvi_config.h  gamepad.h  gamepad_drivers.h  keyboard.h  miscellany.h  sound.h  usb_interface.h
images/firmware/kernel/include/support/: console.h  control_codes.h  fileio.h  font_8x8.h  font_thin_8x8.h  kbd_codes.h  keyboard.h  miscellany.h  soundsystem.h  vdu.h
images/firmware/kernel/locale/: ch.locale  de.locale  fi.locale  fr.locale  gb.locale  it.locale  keymaps.py  sw.locale  us.locale
images/firmware/kernel/support/: console.c  fileio.c  keyboard.c  locale.c  logo.c  mouse.c  soundsystem.c
images/firmware/kernel/support/hardware/: fileio.c  mouse.c  soundsystem.c
images/firmware/kernel/support/miscellany/: console.c  locale.c  logo.c
images/firmware/kernel/support/vdu/: atomic.c  drawing.c  plot.c  scaling.c  textio.c  triangle.c  vduhandler.c
images/scripts/: makeconfig.py  makefont.py  makelogo.py
libraries/: Makefile  libraries.h
libraries/cpu6502/: cpu6502.c
libraries/cpu6502/generator/: 6502.def  Makefile  process.py
libraries/cpu6502/include/: cpu6502.h
libraries/cpuz80/: cpu_support.h  cpuz80.c
libraries/cpuz80/generator/: definitions.rb  storage.rb
libraries/cpuz80/generator/defines/: _demo.def  base.def
libraries/cpuz80/generator/source/: arithmetic8.src  exchange.src  gpcontrol.src  load16.src  shiftrotate.src
libraries/cpuz80/include/: cpuz80.h
libraries/graphics/: atomic.c  drawing.c  ellipse.c  fonts.c  fontstructures.h  mouse.c  port.c  triangle.c
libraries/graphics/fonts/: Makefile  fontdata.h  fontinclude.h  fontindex.h  makeindex.py
libraries/graphics/fonts/fonts/: Makefile  convbmf.py  small3x5.bmf  small5x7.bmf
libraries/graphics/fonts/fonts/fontconvert/: Makefile
libraries/graphics/include/: atomic.h  graphics.h
libraries/mouse/: mouse.c
libraries/mouse/include/: mouse.h
libraries/vdu/: vdu.c
libraries/vdu/include/: vdu.h
simulator/: Makefile
simulator/include/: artsim.h
simulator/source/artsim/: fileio.c  gamepad.c  keyboard.c  main.c  miscellany.c  render.c  sound.c  system.c
simulator/storage/: graphics.4th  grpdemo.4th  serpent.4th
